--- a/Baek_2DimensionalArray.vcxproj
+++ b/Baek_2DimensionalArray.vcxproj
@@ -127,6 +127,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="10798.c" />
+    <ClCompile Include="2566.c" />
     <ClCompile Include="2738.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
