--- a/Baek_2DimensionalArray.vcxproj.filters
+++ b/Baek_2DimensionalArray.vcxproj.filters
@@ -18,5 +18,11 @@
     <ClCompile Include="2738.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="2566.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="10798.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
